# FFmpegCmdUse

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wpf/ffmpegusedemo1/: AudioEditor.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
ffmpegcmd/: CMakeLists.txt  build.gradle
ffmpegcmd/src/main/: AndroidManifest.xml
ffmpegcmd/src/main/cpp/: ffmpeg_cmd.c
ffmpegcmd/src/main/cpp/include/libavcodec/: mathops.h
ffmpegcmd/src/main/java/com/wpf/ffmpegcmd/: CmdList.java  FFmpegCmd.java
gradle/wrapper/: gradle-wrapper.properties
